--- a/embed/tv9.html
+++ b/embed/tv9.html
@@ -16,15 +16,17 @@
            }
        </style>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
+       <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
         <video poster="https://4.bp.blogspot.com/-DifMWPn0CBM/W92WwQgP3TI/AAAAAAAAAsM/Z27Vhx7_8Z0-uv3ZxhRHILHgq8emrOYhwCLcBGAs/s1600/tv9nusantara.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://zet.pluginsandthemes.ro/http://wowza60.indostreamserver.com:1935/tv9nusantara/live/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
-      window.hola_player();
-     </script>
+    (function(){
+      window.hola_player({title: 'tv9'});
+    })();
+  </script>
      </div>
    </body>
 </html>
