--- a/live/daaitv.html
+++ b/live/daaitv.html
@@ -1,76 +1,31 @@
 <!DOCTYPE html>
-<html>
-  <head prefix="og:http://ogp.me/ns#">
-    <title>DAAITV</title>
-    <meta charset="utf-8">
-    <meta property="og:url" content="https://content.jwplatform.com/previews/JRtE84Rl-GoiAFcI3">
-    <meta property="og:title" content="DAAITV">
-    <meta property="og:image" content="https://assets-jpcust.jwpsrv.com/thumbs/JRtE84Rl-720.jpg">
-    <meta property="og:type" content="video">
-    <meta property="og:video" content="">
-    <meta property="og:video:secure_url" content="">
-    <meta property="og:video:type" content="video/mp4">
-    <meta property="og:video:width" content="596">
-    <meta property="og:video:height" content="340">
-    <meta name="twitter:card" content="player">
-    <meta name="twitter:player" content="https://content.jwplatform.com/players/JRtE84Rl-GoiAFcI3.html">
-    <meta name="twitter:player:width" content="596">
-    <meta name="twitter:player:height" content="340">
-    <meta name="twitter:player:stream" content="https://content.jwplatform.com/videos/JRtE84Rl-640.mp4">
-    <meta name="twitter:player:stream:content_type" content="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;">
-    <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/jwplayer.css' />
-    <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/player.css' />
-    <style type="text/css">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>DAAITV</title>
+<link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/jwplayer.css' />
+<link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/player.css' />
+<style type="text/css">
         body { margin:0 auto; padding:0; background:#EEE; overflow: hidden; }
         #title { font:bold 24px/36px Arial, sans-serif; color:#000; margin:40px auto 10px auto; display:none; text-shadow:#FFF 2px 2px 0; }
         #description { font:13px/20px Arial, sans-serif; margin:15px auto; display:none; text-shadow:#FFF 1px 1px 0; }
     </style>
-    <script type="text/javascript">
-    </script>
-    <script src="//ssl.p.jwpcdn.com/player/v/8.2.0/jwplayer.js?v=1.1.0.0.222"></script>
-    <script>jwplayer.key = "9dOyFG96QFb9AWbR+FhhislXHfV1gIhrkaxLYfLydfiYyC0s";</script>
-    
-</head>
-<body bgcolor="transparent" text="white" topmargin="0" leftmargin="0" rightmargin="0">
-<center>
-<div id="myElement">Loading the player...</div>
 <script type="text/javascript">
-    jwplayer("myElement").setup({
-        primary : 'html5',
-        width: '596',
-        height: '340',
-        fallback: false,
-        sharing: '',
-        skin: {"active": "#00CCCC", "inactive": "#CCCCCC", "name": "six"},
-        abouttext: 'Design by : mbah nunung Online',
-        aboutlink: 'http://mbahnunungonline.net',
-        autostart: 'true',
-        stretching: 'uniform',
-        aspectratio: '16:9',
-        captions: {back: false, "default": false, fontsize: 14},
-        playlist: [{ 
-        title: 'DAAITV',       
-        image: 'https://4.bp.blogspot.com/-uFj1DCmT8Gs/UjlkUjelpeI/AAAAAAAABA0/4xsxfO0UogI/w1200-h630-p-k-no-nu/daai+tv.jpg',       
-        sources: [
-            {file: 'https://edge.nim.mivo.tv/daaitv/daaitv2_all/playlist.m3u8'},
-            {file: 'https://edge.nim.mivo.tv/video/assets/oops.m3u8'}
-            ],
-        captions: [
-            {file: 'lostcorners-en.vtt', label: 'Melik'},
-            {file: 'lostcorners-fr2.vtt', label: 'Dadapan'},
-            {file: 'lostcorners-nl.vtt', label: 'Gambor'}
-        ]
-            
-        }]
-    });
-
-    jwplayer().on('play', function(){
-        setTimeout(function(){
-            var textAlt = document.querySelectorAll('#' + jwplayer().id + ' .jw-controlbar-center-group .jw-text-alt')[0];
-            if(textAlt) textAlt.innerHTML = 'DAAITV';
-        },300);
-    });
-</script>
-</center>
+    </script>
+<script src="//ssl.p.jwpcdn.com/player/v/8.2.0/jwplayer.js?v=1.1.0.0.222"></script>
+<script>jwplayer.key = "9dOyFG96QFb9AWbR+FhhislXHfV1gIhrkaxLYfLydfiYyC0s";</script>
+</head>
+<body style="width:100%;height:100%;padding:0;margin:0;background-color:transparent;">
+<div align="center">
+<div id="player"></div>
+<iframe
+    src="/embed/daaitv"
+    height="340"
+    width="596"
+    frameborder="0"
+    scrolling="no"
+    allowfullscreen="true">
+</iframe>
+</div>
 </body>
 </html>
