--- a/embed/kix2.html
+++ b/embed/kix2.html
@@ -23,8 +23,10 @@
         <source src="https://kastproxy-us.herokuapp.com/http://rr.dens.tv/h/h07/01.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
-      window.hola_player();
-     </script>
+    (function(){
+      window.hola_player({title: 'KIX'});
+    })();
+  </script>
      </div>
    </body>
 </html>
