--- a/embed/aniplus.html
+++ b/embed/aniplus.html
@@ -16,11 +16,11 @@
            }
        </style>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://cdn1.mbahnunungonline.net/v3/hola_player/hola_player.js"></script>
+       <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
         <video poster="https://animeinasia.files.wordpress.com/2017/04/aniplus.png" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="http://rr1.dens.tv/h/h02/index.m3u8" type="application/x-mpegURL" />
+        <source src="https://kastproxy-us.herokuapp.com/http://rr1.dens.tv/h/h02/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
