--- a/embed/berita1.html
+++ b/embed/berita1.html
@@ -22,9 +22,11 @@
         <video poster="../img/thumbs/BeritaSatu.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://kastproxy-us.herokuapp.com/http://edge.linknetott.swiftserve.com/live/BsNew/amlst:beritasatunewsbs/playlist.m3u8" type="application/x-mpegURL" />
        </video>
-     <script>
-      window.hola_player();
-     </script>
+      <script>
+    (function(){
+      window.hola_player({title: 'BERITASATU'});
+    })();
+  </script>
      </div>
    </body>
 </html>
