--- a/embed/sbc.html
+++ b/embed/sbc.html
@@ -16,7 +16,7 @@
            }
        </style>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://cdn1.mbahnunungonline.net/v3/hola_player/hola_player.js"></script>
+       <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
         <video poster="https://3.bp.blogspot.com/-pVrVc2ByBKk/Ws8tYW60MLI/AAAAAAAAIwc/7apQs8LYJGYhHd0Y5WzH0PCMayFlXggrACPcBGAYYCw/s1600/19.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
