--- a/embed/ZBioskop.html
+++ b/embed/ZBioskop.html
@@ -16,7 +16,7 @@
            }
        </style>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://cdn1.mbahnunungonline.net/v3/hola_player/hola_player.js"></script>
+       <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
         <video poster="https://3.bp.blogspot.com/-IAJL70eGt68/XMY7x2zCE4I/AAAAAAAALXU/SkAnsL54b7wFR4R-8Bv5TbP_aueIMqRzACLcBGAs/s1600/zee-bioskop.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
