--- a/live/kompastv.html
+++ b/live/kompastv.html
@@ -14,8 +14,8 @@
     <meta property="og:description" content="Klik Gambarnya Boss untuk nonton KOMPASTV langsung lewat Facebook." />
     <meta property="og:image" content="https://1.bp.blogspot.com/-my1MsBVvEqc/W9tNYjL3phI/AAAAAAAAJ50/g3NyMUkYXMICDzEvgc2rjAMYj_2A-yRGgCLcBGAs/s1600/logo_kompastv.png" />
     <meta property="og:video" content="https://cdn1.mbahnunungonline.net/player/player5.8.swf?file=mp4:metro_360p.stream&type=rtmp&streamer=rtmp://103.225.66.101:1935/live-edge&autostart=true&stretching=exactfit&volume=100&bandwidth=1&duration=0&showdigits=&&stretching=exactfit&backcolor=000000&frontcolor=ffffff&lightcolor=CD0000&screencolor=0000fff&volume=100&controlbar=over&autostart=true&displayclick=fullscreen&repeat=false&image=https://cdn1.mbahnunungonline.net/images/kompastv.jpg"/>
-    <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/jwplayer.css' />
-    <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/player.css' />
+    <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/jwplayer.css' />
+    <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/player.css' />
     <style type="text/css">
         body { margin:0 auto; padding:0; background:#2f3542; overflow: hidden; }
         #title { font:bold 24px/36px Arial, sans-serif; color:#000; margin:40px auto 10px auto; display:none; text-shadow:#FFF 2px 2px 0; }
@@ -23,7 +23,7 @@
     </style>
     <script type="text/javascript">
     </script>
-    <script src="https://cdn1.mbahnunungonline.net/jwp/jw7-hlsjs-provider.js"></script>
+    <script src="//cdn4.mbahnunungonline.net/js/jw7-hlsjs-provider.js"></script>
     <script src="//ssl.p.jwpcdn.com/player/v/8.2.0/jwplayer.js?v=1.1.0.0.222"></script>
     <script>jwplayer.key = "9dOyFG96QFb9AWbR+FhhislXHfV1gIhrkaxLYfLydfiYyC0s";</script>
   </head>
