--- a/embed/rtv.html
+++ b/embed/rtv.html
@@ -29,7 +29,7 @@
             autoplay    : false,
             mute        : false,
             live        : true,
-            imageUrl    : "https://cdn4.mbahnunungonline.net/images/rtv.jpg?v=8.3.2?v=8.3.2",
+            imageUrl    : "https://i.imgur.com/7ak7DfH.jpg?v=8.3.2?v=8.3.2",
             channel     : "livestreaming",
             videoUrl    : "https://livetvhooq.akamaized.net/902d04d98a094dc6a78e73166d108e3d/ap-southeast-1/5493668622001/profile_1/chunklist.m3u8?hdnts=st=1572085873~exp=9007200826826864~acl=/902d04d98a094dc6a78e73166d108e3d/*/profile_1/chunklist.m3u8*~hmac=252a726bb20fdb977834f11d3b83aa67138e81da32ef16b763a871e5ed767748",
             adRules     : '',
