--- a/embed/kompastv.html
+++ b/embed/kompastv.html
@@ -19,7 +19,7 @@
        <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://cdn4.mbahnunungonline.net/images/kompastv.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://i.imgur.com/6rmMN8f.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s104/index.m3u8" type="application/x-mpegURL" />
         </video>
      <script>
