--- a/embed/iNewstv.html
+++ b/embed/iNewstv.html
@@ -29,7 +29,7 @@
             autoplay    : false,
             mute        : false,
             live        : true,
-            imageUrl    : "../img/thumbs/inews.jpg?v=8.3.2?v=8.3.2",
+            imageUrl    : "https://i.imgur.com/eRSkUka.jpg?v=8.3.2?v=8.3.2",
             channel     : "livestreaming",
             videoUrl    : "https://linier.akamaized.net/live/eds/iNews_Logo/sa_hls/iNews_Logo.m3u8",
             adRules     : '',
