--- a/live/celestialmovies.html
+++ b/live/celestialmovies.html
@@ -28,7 +28,7 @@
             autoplay    : true,
             mute        : false,
             live        : true,
-            imageUrl    : "https://i.imgur.com/CDhPRgl.jpg?v=8.3.2",
+            imageUrl    : "https://i.imgur.com/uqvybVz.jpg?v=8.3.2",
             channel     : "livestreaming",
             videoUrl    : "https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s33/index.m3u8",
             adRules     : '',
