--- a/live/SuperSoccerTV.html
+++ b/live/SuperSoccerTV.html
@@ -29,7 +29,7 @@
             live        : true,
             imageUrl    : "https://1.bp.blogspot.com/-1TxmgHmPpP0/XMbjNrnhk4I/AAAAAAAALX8/kRQRtKQaBuIDzpdDVFpYUAVqdERrO6zvgCLcBGAs/s1600/channel-sstv.png",
             channel     : "livestreaming",
-            videoUrl    : "https://kastproxy-us.herokuapp.com/http://rr.dens.tv/h/h20/index2.m3u8",
+            videoUrl    : "https://kastproxy-us.herokuapp.com/http://rr.dens.tv/h/h20/01.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
