--- a/embed/bbstv.html
+++ b/embed/bbstv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://3.bp.blogspot.com/-fsVYb5UFdxI/XMsaVzdJuTI/AAAAAAAALZ8/EqT4cr5ksfE2cNgTNiTGQYsc-CibC3cxQCLcBGAs/s1600/bbstv_logo.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://dcunilive94-lh.akamaihd.net/i/dclive_1@839502/index_150_av-b.m3u8?sd=10&set-akamai-hls-revision=3&rebase=on" type="application/x-mpegURL" />
+        <source src="https://kastproxy-us.herokuapp.com/http://livestream.biznetvideo.net/biznet_adventure/smil:adventure.smil/playlist.m3u8?bizkeylivestarttime=0&bizkeyliveendtime=0&bizkeyliveCustomParameter=myParameter&bizkeylivehash=iJYiwvsAhKLgYjtMcoxVp1GZg1XW_wNcrvg-lcNq6Vdyv_lWVEr0cSEOBCkIyfTS" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
