--- a/embed/babytv.html
+++ b/embed/babytv.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <script async src="https://www.googletagmanager.com/gtag/js"></script>
     <title>Player</title>
     
@@ -10,13 +11,13 @@
     <link href="//vjs.zencdn.net/7.1.0/video-js.min.css" rel="stylesheet">
     <link href="//cdn1.mbahnunungonline.net/videojs-hls/dist/styles.css" rel="stylesheet">
     <style>
-				.video-js:not(.vjs-has-started) .vjs-control-bar {
-					display: flex;
-				}
-				.video-js:not(.vjs-has-started) .vjs-control-bar .vjs-time-tooltip {
-					display: none;
-				}
-			</style>
+	.video-js:not(.vjs-has-started) .vjs-control-bar {
+	 display: flex;
+		}
+		.video-js:not(.vjs-has-started) .vjs-control-bar .vjs-time-tooltip {
+		display: none;
+		}
+	</style>
     <script src="//vjs.zencdn.net/7.1.0/video.min.js"></script>
     <script src="//cdn1.mbahnunungonline.net/videojs-hls/dist/player.js?ver=1555334107"></script>
     
