--- a/embed/zoom.html
+++ b/embed/zoom.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://3.bp.blogspot.com/-rpqZbTYD3PA/W-GLXA9JmiI/AAAAAAAAJ_U/q4BiDXuSvrI1KM3oizrxIoQq75xXXoeiwCLcBGAs/s1600/zoom-tv-logo.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://pubads.g.doubleclick.net/ssai/event/JCAm25qkRXiKcK1AJMlvKQ/master.m3u8" type="application/x-mpegURL" />
+        <source src="https://dai.google.com/linear/hls/event/JCAm25qkRXiKcK1AJMlvKQ/master.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
