--- a/embed/mbc-bollywood.html
+++ b/embed/mbc-bollywood.html
@@ -19,7 +19,7 @@
       <div id="vjs-video-embed" class="left relative"></div>
       <div id="my-video" class="video_embed_hls post_embed_video_center">
       <video class="video-js vjs-default-skin vjs-16-9" controls autoplay></video>
-      <script>(function(){var a={linear:"",};var b=document.location.search.substr(1);window.hola_player({title:"",poster:"?v=8.3.2",sources:[{src:"https://cors.viastreaming.net/http://livecdnh2.tvanywhere.ae/hls/mbc_bolly/02.m3u8",}],ads:{adTagUrl:a[b||"linear"]||b,},settings:{quality:true,},watermark:{image:'',position:'bottom-left',fadeTime:5000,},})})();</script>
+      <script>(function(){var a={linear:"",};var b=document.location.search.substr(1);window.hola_player({title:"",poster:"?v=8.3.2",sources:[{src:"https://cors.viastreaming.net/http://livecdnh2.tvanywhere.ae/hls/mbc_bolly/index.m3u8",}],ads:{adTagUrl:a[b||"linear"]||b,},settings:{quality:true,},watermark:{image:'',position:'bottom-left',fadeTime:5000,},})})();</script>
   </div>
  
   </body>
