--- a/embed/b4u-music.html
+++ b/embed/b4u-music.html
@@ -16,7 +16,7 @@
            }
        </style>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://cdn1.mbahnunungonline.net/v3/hola_player/hola_player.js"></script>
+       <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
         <video poster="https://vignette.wikia.nocookie.net/logopedia/images/1/17/B4U_MUSIC.png/revision/latest?cb=20150308151706" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
