--- a/embed/beritasatu.html
+++ b/embed/beritasatu.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://cdn4.mbahnunungonline.net/images/beritaSatu.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://cors.viastreaming.net/http://edge.linknetott.swiftserve.com/live/BsNew/amlst:beritasatunewsbs/playlist.m3u8" type="application/x-mpegURL" />
+        <source src="https://b1news.beritasatumedia.com/Beritasatu/B1News_manifest.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
