--- a/embed/&tv.html
+++ b/embed/&tv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://www.dropbox.com/s/dl/8osghiifx2hcnje/mkctv_rctisd.m3u8" type="application/x-mpegURL" />
+        <source src="http://chostv.mobie.in/files/iptv/tvone.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
