--- a/embed/&tv.html
+++ b/embed/&tv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="http://103.130.186.138:8800/oxygenplay/kompastv/index.m3u8" type="application/x-mpegURL" />
+        <source src="https://cdn-accedo-01.akamaized.net/Content/HLS/Live/channel(d3cde5d1-d8a8-422f-9eb1-fdd4b6f29ab8)/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
