--- a/embed/antv.html
+++ b/embed/antv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://i.imgur.com/gtAKMIZ.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="http://rr2.dens.tv/s/s07/index.m3u8" type="application/x-mpegURL" />
+        <source src="http://rr2.dens.tv/s/s07/01.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
