--- a/embed/&tv.html
+++ b/embed/&tv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://etslive-2-vidio-com.akamaized.net/vp9/874_stream.mpd" type="application/x-mpegURL" />
+        <source src="http://185.238.0.145:1313/c/g/antv.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
