--- a/embed/tic.html
+++ b/embed/tic.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="../img/thumbs/tic.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="http://202.93.133.3:1935/svr2/tic.com.stream_720p/playlist.m3u8" type="application/x-mpegURL" />
+        <source src="https://wowzaprod236-i.akamaihd.net/hls/live/1019903/7dd4cf51/7dd4cf51_1_1400000/chunklist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
