--- a/embed/bein1.html
+++ b/embed/bein1.html
@@ -48,13 +48,13 @@ document.getElementsByTagName('head')[0].appendChild(meta);
 		aboutlink: 'http://mbahnunungonline.net',
 		autostart: 'true',
 		stretching: 'uniform',
-		file: "http://79.137.41.99/DisneyChannel/tracks-v1a1/mono.m3u8",
+		file: "https://raw.githubusercontent.com/exodiver/IPTV/master/M3U8/Token/TV9.m3u8",
 		title: "ANIMAX",
 		image: "https://assets.change.org/photos/5/fw/yl/KFfWYlPtIbbyAup-800x450-noPad.jpg?1521112811"
 	});
 	jwplayer().onError(function(){
 		jwplayer().load({
-			file: "https://t4.mbahnunungonline.net/qwr9ew/s/s104/index.m3u8",
+			file: "http://79.137.41.99/DisneyChannel/tracks-v1a1/mono.m3u8",
 			title: "KOMPASTV",
 			//image:""
 		});jwplayer().play();
