--- a/embed/bein1.html
+++ b/embed/bein1.html
@@ -48,7 +48,7 @@ document.getElementsByTagName('head')[0].appendChild(meta);
 		aboutlink: 'http://mbahnunungonline.net',
 		autostart: 'true',
 		stretching: 'uniform',
-		file: "https://dl.dropbox.com/sh/ufeeyetsmgdp748/AACi28jNOAEDeJfWTVL2HchAa/Net TV.m3u8?dl=0",
+		file: "https://vcdn2.rctiplus.id:443/live/eds/gtv_fta/live_fta/gtv_fta-avc1_1537200=6-mp4a_64000_eng=2.m3u8",
 		title: "ANIMAX",
 		image: "https://assets.change.org/photos/5/fw/yl/KFfWYlPtIbbyAup-800x450-noPad.jpg?1521112811"
 	});
