--- a/embed/iqraatv.html
+++ b/embed/iqraatv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://i.imgur.com/ad9iXTj.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s27/index.m3u8" type="application/x-mpegURL" />
+        <source src="https://kastproxy-us.herokuapp.com/http://iqraac.cdn.mangomolo.com/iqraa/smil:iqraar1.stream.smil/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
